--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: "dpdorkdiary";
+  src: url("/fonts/dpdorkdiary-p267-webfont.woff2") format("woff2"),
+    url("/fonts/dpdorkdiary-p267-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "dpdorkdiary", "Gloria Hallelujah", cursive;
+}
+
+h1 {
+  font-family: "Gloria Hallelujah", cursive;
 }
