👽️ Repository creation and key initialization done

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,18 @@
   font-style: normal;
 }
 
+#nprogress .spinner {
+  display: none !important;
+}
+
+#nprogress .bar {
+  background: #000 !important;
+}
+
+#nprogress .peg {
+  box-shadow: 0 0 10px #000, 0 0 5px #000 !important;
+}
+
 body {
   font-family: "dpdorkdiary", "Gloria Hallelujah", cursive;
 }
