--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,10 @@ h1 {
   width: 100%;
 }
 
+.toast-card-wrapper .wired-rendered {
+  width: 100px;
+}
+
 .wired-divider-container .wired-rendered {
   min-height: auto !important;
 }
