--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,13 @@ h1 {
   width: 100%;
 }
 
+.info-card-container .wired-rendered {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .toast-card-wrapper .wired-rendered {
   min-width: 100px;
 }
